--- a/SquareV1Core/SquareV1Core.csproj
+++ b/SquareV1Core/SquareV1Core.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Meyer.Square.V1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
