--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,4 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 /SquareV1CoreTest/PaymentTestPrivate.cs
+/TestConsole/ProgramPrivate.cs
