--- a/SquareV1Client/SquareV1Client.csproj
+++ b/SquareV1Client/SquareV1Client.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>MeyerCorp.Square.V1</AssemblyName>
     <RootNamespace>MeyerCorp.Square.V1</RootNamespace>
     <PackageId>MeyerCorp.Square.V1</PackageId>
-    <Version>0.0.5</Version>
+    <Version>0.0.6</Version>
     <Authors>MeyerCorporation</Authors>
     <Company>Meyer Corporation</Company>
     <Description>A .NET Core based SDK for the Square V1 API</Description>
@@ -16,14 +16,14 @@
     <PackageIconUrl>https://meyerinfrastructureclientmvcdev.azurewebsites.net/favicon.ico</PackageIconUrl>
     <PackageTags>Square API Rest .NETCore SDK</PackageTags>
     <RepositoryType>Git</RepositoryType>
-    <PackageReleaseNotes>In development: More functionality for Payments.</PackageReleaseNotes>
+    <PackageReleaseNotes>In development: Roll back MS Rest ClientRuntime version.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.13" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
