--- a/SquareV1Client/SquareV1Client.csproj
+++ b/SquareV1Client/SquareV1Client.csproj
@@ -5,8 +5,8 @@
     <AssemblyName>MeyerCorp.Square.V1</AssemblyName>
     <RootNamespace>MeyerCorp.Square.V1</RootNamespace>
     <PackageId>MeyerCorp.Square.V1</PackageId>
-    <Version>0.0.6</Version>
-    <Authors>MeyerCorporation</Authors>
+    <Version>0.1.0</Version>
+    <Authors>Meyer Corporation, Daniel Przybylski</Authors>
     <Company>Meyer Corporation</Company>
     <Description>A .NET Core based SDK for the Square V1 API</Description>
     <Copyright>2018 Meyer Corporation</Copyright>
@@ -16,7 +16,7 @@
     <PackageIconUrl>https://meyerinfrastructureclientmvcdev.azurewebsites.net/favicon.ico</PackageIconUrl>
     <PackageTags>Square API Rest .NETCore SDK</PackageTags>
     <RepositoryType>Git</RepositoryType>
-    <PackageReleaseNotes>In development: Roll back MS Rest ClientRuntime version.</PackageReleaseNotes>
+    <PackageReleaseNotes>In development: Now supporting getting locations.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
