--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,4 @@ ASALocalRun/
 /SquareV1CoreTest/PaymentTestPrivate.cs
 /TestConsole/ProgramPrivate.cs
 /NuGet.ps1
+/SquareV1CoreTest/TestPrivate.cs
