--- a/SquareV1Client/SquareV1Client.csproj
+++ b/SquareV1Client/SquareV1Client.csproj
@@ -22,6 +22,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\SettlementStatus.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Models\SettlementStatus.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
