--- a/SquareV1Client/SquareV1Client.csproj
+++ b/SquareV1Client/SquareV1Client.csproj
@@ -22,11 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\SettlementStatus.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Models\SettlementStatus.cs" />
+    <None Include="Transaction\SettlementStatus.cs" />
   </ItemGroup>
 
   <ItemGroup>
