--- a/SquareV1Client/SquareV1Client.csproj
+++ b/SquareV1Client/SquareV1Client.csproj
@@ -5,8 +5,8 @@
     <AssemblyName>MeyerCorp.Square.V1</AssemblyName>
     <RootNamespace>MeyerCorp.Square.V1</RootNamespace>
     <PackageId>MeyerCorp.Square.V1</PackageId>
-    <Version>0.5.0</Version>
-    <Authors>Meyer Corporation, Daniel Przybylski</Authors>
+    <Version>0.5.1</Version>
+    <Authors>Meyer Corporation</Authors>
     <Company>Meyer Corporation</Company>
     <Description>A .NET Core based SDK for the Square V1 API</Description>
     <Copyright>2018 Meyer Corporation</Copyright>
@@ -16,7 +16,7 @@
     <PackageIconUrl>https://meyerinfrastructureclientmvcdev.azurewebsites.net/favicon.ico</PackageIconUrl>
     <PackageTags>Square API Rest .NETCore SDK</PackageTags>
     <RepositoryType>Git</RepositoryType>
-    <PackageReleaseNotes>In development: First full BETA release. More unit testing is needed.</PackageReleaseNotes>
+    <PackageReleaseNotes>In development: Bug fix: Could not handle a paginated collection where the Next URL link response header is null/empty.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
